--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,25 @@ body{
     background-color: #F8EDED;
 }
 
+
+/* text gradient  */
+.create-new-form-text{
+    background:radial-gradient(#FF512F, #DD2476);
+    background-clip:text;
+    color:transparent;
+}
+
+/* new morphism button */
+
+.new-morphism {
+    background-color: #f9f9f9;
+}
+
+.new-morphism:hover{
+    box-shadow:12px 12px 12px rgba(0,0,0,0.1),
+               -10px -10px 10px white ;
+}
+
+.glass{
+    backdrop-filter: blur(10px);
+}
